src/lexer.c
/* Generated by re2c 4.5.1 */
#line 1 "src/lexer.re"
#include "rbs/lexer.h"

rbs_token_t rbs_lexer_next_token(rbs_lexer_t *lexer) {
    rbs_lexer_t backup;

    backup = *lexer;

#line 12 "src/lexer.c"
    {
        unsigned int yych;
        unsigned int yyaccept = 0;
        yych = rbs_peek(lexer);
        if (yych <= '[') {
            if (yych <= '(') {
                if (yych <= ' ') {
                    if (yych <= '\n') {
                        if (yych <= 0x00000000) goto yy1;
                        if (yych <= 0x00000008) goto yy2;
                        if (yych <= '\t') goto yy4;
                        goto yy6;
                    } else {
                        if (yych == '\r') goto yy6;
                        if (yych <= 0x0000001F) goto yy2;
                        goto yy4;
                    }
                } else {
                    if (yych <= '$') {
                        if (yych <= '!') goto yy7;
                        if (yych <= '"') goto yy9;
                        if (yych <= '#') goto yy10;
                        goto yy12;
                    } else {
                        if (yych <= '%') goto yy13;
                        if (yych <= '&') goto yy14;
                        if (yych <= '\'') goto yy15;
                        goto yy16;
                    }
                }
            } else {
                if (yych <= '9') {
                    if (yych <= ',') {
                        if (yych <= ')') goto yy17;
                        if (yych <= '*') goto yy18;
                        if (yych <= '+') goto yy19;
                        goto yy20;
                    } else {
                        if (yych <= '-') goto yy21;
                        if (yych <= '.') goto yy22;
                        if (yych <= '/') goto yy24;
                        goto yy25;
                    }
                } else {
                    if (yych <= '=') {
                        if (yych <= ':') goto yy27;
                        if (yych <= ';') goto yy2;
                        if (yych <= '<') goto yy29;
                        goto yy31;
                    } else {
                        if (yych <= '?') {
                            if (yych <= '>') goto yy33;
                            goto yy35;
                        } else {
                            if (yych <= '@') goto yy36;
                            if (yych <= 'Z') goto yy37;
                            goto yy39;
                        }
                    }
                }
            }
        } else {
            if (yych <= 'n') {
                if (yych <= 'c') {
                    if (yych <= '_') {
                        if (yych <= '\\') goto yy2;
                        if (yych <= ']') goto yy40;
                        if (yych <= '^') goto yy41;
                        goto yy42;
                    } else {
                        if (yych <= '`') goto yy44;
                        if (yych <= 'a') goto yy46;
                        if (yych <= 'b') goto yy48;
                        goto yy49;
                    }
                } else {
                    if (yych <= 'h') {
                        if (yych <= 'd') goto yy50;
                        if (yych <= 'e') goto yy51;
                        if (yych <= 'f') goto yy52;
                        goto yy53;
                    } else {
                        if (yych <= 'i') goto yy55;
                        if (yych <= 'l') goto yy53;
                        if (yych <= 'm') goto yy56;
                        goto yy57;
                    }
                }
            } else {
                if (yych <= 'v') {
                    if (yych <= 'r') {
                        if (yych <= 'o') goto yy58;
                        if (yych <= 'p') goto yy59;
                        if (yych <= 'q') goto yy53;
                        goto yy60;
                    } else {
                        if (yych <= 's') goto yy61;
                        if (yych <= 't') goto yy62;
                        if (yych <= 'u') goto yy63;
                        goto yy64;
                    }
                } else {
                    if (yych <= '}') {
                        if (yych <= 'z') goto yy53;
                        if (yych <= '{') goto yy65;
                        if (yych <= '|') goto yy66;
                        goto yy67;
                    } else {
                        if (yych <= 0x0000007F) {
                            if (yych <= '~') goto yy24;
                            goto yy2;
                        } else {
                            if (yych == 0x0000FFFD) goto yy2;
                            goto yy68;
                        }
                    }
                }
            }
        }
    yy1:
        rbs_skip(lexer);
#line 175 "src/lexer.re"
        {
            return rbs_next_eof_token(lexer);
        }
#line 136 "src/lexer.c"
    yy2:
        rbs_skip(lexer);
    yy3:
#line 176 "src/lexer.re"
    {
        return rbs_next_token(lexer, ErrorToken);
    }
#line 142 "src/lexer.c"
    yy4:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == '\t') goto yy4;
        if (yych == ' ') goto yy4;
    yy5:
#line 174 "src/lexer.re"
    {
        return rbs_next_token(lexer, tTRIVIA);
    }
#line 151 "src/lexer.c"
    yy6:
        rbs_skip(lexer);
        goto yy5;
    yy7:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == '=') goto yy24;
        if (yych == '~') goto yy24;
    yy8:
#line 61 "src/lexer.re"
    {
        return rbs_next_token(lexer, tOPERATOR);
    }
#line 163 "src/lexer.c"
    yy9:
        yyaccept = 0;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych <= 0x00000000) goto yy3;
        goto yy71;
    yy10:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '\f') {
            if (yych <= 0x00000000) goto yy11;
            if (yych != '\n') goto yy10;
        } else {
            if (yych <= '\r') goto yy11;
            if (yych != 0x0000FFFD) goto yy10;
        }
    yy11:
#line 73 "src/lexer.re"
    {
        return rbs_next_token(
            lexer,
            lexer->first_token_of_line ? tLINECOMMENT : tCOMMENT
        );
    }
#line 189 "src/lexer.c"
    yy12:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= ')') {
            if (yych <= 0x0000001F) {
                if (yych <= '\n') {
                    if (yych <= 0x00000000) goto yy3;
                    if (yych <= 0x00000008) goto yy75;
                    goto yy3;
                } else {
                    if (yych == '\r') goto yy3;
                    goto yy75;
                }
            } else {
                if (yych <= '#') {
                    if (yych <= ' ') goto yy3;
                    if (yych <= '"') goto yy77;
                    goto yy75;
                } else {
                    if (yych == '%') goto yy3;
                    if (yych <= '\'') goto yy77;
                    goto yy3;
                }
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= '/') {
                    if (yych == '-') goto yy75;
                    goto yy77;
                } else {
                    if (yych <= '9') goto yy75;
                    if (yych <= '>') goto yy77;
                    goto yy75;
                }
            } else {
                if (yych <= '^') {
                    if (yych == '\\') goto yy77;
                    goto yy3;
                } else {
                    if (yych <= 'z') goto yy75;
                    if (yych <= '}') goto yy3;
                    if (yych <= '~') goto yy77;
                    goto yy75;
                }
            }
        }
    yy13:
        yyaccept = 1;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych == 'a') goto yy78;
        goto yy8;
    yy14:
        rbs_skip(lexer);
#line 45 "src/lexer.re"
        {
            return rbs_next_token(lexer, pAMP);
        }
#line 247 "src/lexer.c"
    yy15:
        yyaccept = 0;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych <= 0x00000000) goto yy3;
        goto yy80;
    yy16:
        rbs_skip(lexer);
#line 36 "src/lexer.re"
        {
            return rbs_next_token(lexer, pLPAREN);
        }
#line 259 "src/lexer.c"
    yy17:
        rbs_skip(lexer);
#line 37 "src/lexer.re"
        {
            return rbs_next_token(lexer, pRPAREN);
        }
#line 264 "src/lexer.c"
    yy18:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == '*') goto yy84;
#line 47 "src/lexer.re"
        {
            return rbs_next_token(lexer, pSTAR);
        }
#line 271 "src/lexer.c"
    yy19:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '/') goto yy8;
        if (yych <= '9') goto yy25;
        if (yych == '@') goto yy24;
        goto yy8;
    yy20:
        rbs_skip(lexer);
#line 42 "src/lexer.re"
        {
            return rbs_next_token(lexer, pCOMMA);
        }
#line 283 "src/lexer.c"
    yy21:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        switch (yych) {
        case '-':
            goto yy85;
        case '0':
        case '1':
        case '2':
        case '3':
        case '4':
        case '5':
        case '6':
        case '7':
        case '8':
        case '9':
            goto yy25;
        case '>':
            goto yy86;
        case '@':
            goto yy24;
        default:
            goto yy8;
        }
    yy22:
        yyaccept = 2;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych == '.') goto yy87;
    yy23:
#line 49 "src/lexer.re"
    {
        return rbs_next_token(lexer, pDOT);
    }
#line 312 "src/lexer.c"
    yy24:
        rbs_skip(lexer);
        goto yy8;
    yy25:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '/') goto yy26;
        if (yych <= '9') goto yy25;
        if (yych == '_') goto yy25;
    yy26:
#line 65 "src/lexer.re"
    {
        return rbs_next_token(lexer, tINTEGER);
    }
#line 325 "src/lexer.c"
    yy27:
        yyaccept = 3;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych <= '<') {
            if (yych <= '*') {
                if (yych <= '#') {
                    if (yych <= ' ') goto yy28;
                    if (yych <= '!') goto yy88;
                    if (yych <= '"') goto yy90;
                } else {
                    if (yych <= '&') {
                        if (yych <= '$') goto yy91;
                        goto yy92;
                    } else {
                        if (yych <= '\'') goto yy93;
                        if (yych >= '*') goto yy94;
                    }
                }
            } else {
                if (yych <= '.') {
                    if (yych == ',') goto yy28;
                    if (yych <= '-') goto yy95;
                } else {
                    if (yych <= '9') {
                        if (yych <= '/') goto yy92;
                    } else {
                        if (yych <= ':') goto yy96;
                        if (yych >= '<') goto yy97;
                    }
                }
            }
        } else {
            if (yych <= '_') {
                if (yych <= '@') {
                    if (yych <= '=') goto yy98;
                    if (yych <= '>') goto yy99;
                    if (yych >= '@') goto yy100;
                } else {
                    if (yych <= '[') {
                        if (yych <= 'Z') goto yy101;
                        goto yy103;
                    } else {
                        if (yych <= ']') goto yy28;
                        if (yych <= '^') goto yy92;
                        goto yy101;
                    }
                }
            } else {
                if (yych <= '}') {
                    if (yych <= 'z') {
                        if (yych <= '`') goto yy92;
                        goto yy101;
                    } else {
                        if (yych == '|') goto yy92;
                    }
                } else {
                    if (yych <= 0x0000007F) {
                        if (yych <= '~') goto yy92;
                    } else {
                        if (yych != 0x0000FFFD) goto yy101;
                    }
                }
            }
        }
    yy28:
#line 56 "src/lexer.re"
    {
        return rbs_next_token(lexer, pCOLON);
    }
#line 395 "src/lexer.c"
    yy29:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= ';') goto yy30;
        if (yych <= '<') goto yy24;
        if (yych <= '=') goto yy104;
    yy30:
#line 58 "src/lexer.re"
    {
        return rbs_next_token(lexer, pLT);
    }
#line 405 "src/lexer.c"
    yy31:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '>') {
            if (yych <= '<') goto yy32;
            if (yych <= '=') goto yy105;
            goto yy106;
        } else {
            if (yych == '~') goto yy24;
        }
    yy32:
#line 55 "src/lexer.re"
    {
        return rbs_next_token(lexer, pEQ);
    }
#line 419 "src/lexer.c"
    yy33:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '<') goto yy34;
        if (yych <= '>') goto yy24;
    yy34:
#line 59 "src/lexer.re"
    {
        return rbs_next_token(lexer, pGT);
    }
#line 428 "src/lexer.c"
    yy35:
        rbs_skip(lexer);
#line 46 "src/lexer.re"
        {
            return rbs_next_token(lexer, pQUESTION);
        }
#line 433 "src/lexer.c"
    yy36:
        yyaccept = 0;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych <= '`') {
            if (yych <= 'Z') {
                if (yych <= '?') goto yy3;
                if (yych <= '@') goto yy107;
                goto yy108;
            } else {
                if (yych == '_') goto yy108;
                goto yy3;
            }
        } else {
            if (yych <= 'z') {
                if (yych == 'r') goto yy111;
                goto yy108;
            } else {
                if (yych <= 0x0000007F) goto yy3;
                if (yych == 0x0000FFFD) goto yy3;
                goto yy108;
            }
        }
    yy37:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'Z') {
            if (yych <= '9') {
                if (yych == '!') goto yy112;
                if (yych >= '0') goto yy37;
            } else {
                if (yych == '=') goto yy113;
                if (yych >= 'A') goto yy37;
            }
        } else {
            if (yych <= 'z') {
                if (yych == '_') goto yy37;
                if (yych >= 'a') goto yy37;
            } else {
                if (yych <= 0x0000007F) goto yy38;
                if (yych != 0x0000FFFD) goto yy37;
            }
        }
    yy38:
#line 146 "src/lexer.re"
    {
        return rbs_next_token(lexer, tUIDENT);
    }
#line 481 "src/lexer.c"
    yy39:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == ']') goto yy114;
#line 38 "src/lexer.re"
        {
            return rbs_next_token(lexer, pLBRACKET);
        }
#line 488 "src/lexer.c"
    yy40:
        rbs_skip(lexer);
#line 39 "src/lexer.re"
        {
            return rbs_next_token(lexer, pRBRACKET);
        }
#line 493 "src/lexer.c"
    yy41:
        rbs_skip(lexer);
#line 44 "src/lexer.re"
        {
            return rbs_next_token(lexer, pHAT);
        }
#line 498 "src/lexer.c"
    yy42:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'Z') {
            if (yych <= '9') {
                if (yych == '!') goto yy112;
                if (yych >= '0') goto yy115;
            } else {
                if (yych == '=') goto yy113;
                if (yych >= 'A') goto yy118;
            }
        } else {
            if (yych <= 'z') {
                if (yych == '_') goto yy120;
                if (yych >= 'a') goto yy115;
            } else {
                if (yych <= 0x0000007F) goto yy43;
                if (yych != 0x0000FFFD) goto yy68;
            }
        }
    yy43:
#line 149 "src/lexer.re"
    {
        return rbs_next_token(lexer, tULLIDENT);
    }
#line 522 "src/lexer.c"
    yy44:
        yyaccept = 4;
        rbs_skip(lexer);
        backup = *lexer;
        yych = rbs_peek(lexer);
        if (yych <= ' ') {
            if (yych <= 0x00000000) goto yy45;
            if (yych <= 0x0000001F) goto yy121;
        } else {
            if (yych != ':') goto yy121;
        }
    yy45:
#line 51 "src/lexer.re"
    {
        return rbs_next_token(lexer, tOPERATOR);
    }
#line 537 "src/lexer.c"
    yy46:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'r') {
            if (yych == 'l') goto yy122;
            goto yy54;
        } else {
            if (yych <= 's') goto yy123;
            if (yych <= 't') goto yy125;
            goto yy54;
        }
    yy47:
#line 145 "src/lexer.re"
    {
        return rbs_next_token(lexer, tLIDENT);
    }
#line 552 "src/lexer.c"
    yy48:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'o') goto yy126;
        goto yy54;
    yy49:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'l') goto yy127;
        goto yy54;
    yy50:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'e') goto yy128;
        goto yy54;
    yy51:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'n') goto yy129;
        if (yych == 'x') goto yy130;
        goto yy54;
    yy52:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'a') goto yy131;
        goto yy54;
    yy53:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
    yy54:
        if (yych <= 'Z') {
            if (yych <= '9') {
                if (yych == '!') goto yy112;
                if (yych <= '/') goto yy47;
                goto yy53;
            } else {
                if (yych == '=') goto yy113;
                if (yych <= '@') goto yy47;
                goto yy53;
            }
        } else {
            if (yych <= 'z') {
                if (yych == '_') goto yy53;
                if (yych <= '`') goto yy47;
                goto yy53;
            } else {
                if (yych <= 0x0000007F) goto yy47;
                if (yych == 0x0000FFFD) goto yy47;
                goto yy53;
            }
        }
    yy55:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'n') goto yy132;
        goto yy54;
    yy56:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'o') goto yy134;
        goto yy54;
    yy57:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'i') goto yy135;
        goto yy54;
    yy58:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'u') goto yy136;
        goto yy54;
    yy59:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'r') goto yy137;
        if (yych == 'u') goto yy138;
        goto yy54;
    yy60:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'e') goto yy139;
        goto yy54;
    yy61:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'h') {
            if (yych == 'e') goto yy140;
            goto yy54;
        } else {
            if (yych <= 'i') goto yy141;
            if (yych == 'k') goto yy142;
            goto yy54;
        }
    yy62:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'q') {
            if (yych == 'o') goto yy143;
            goto yy54;
        } else {
            if (yych <= 'r') goto yy144;
            if (yych == 'y') goto yy145;
            goto yy54;
        }
    yy63:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'n') goto yy146;
        if (yych == 's') goto yy147;
        goto yy54;
    yy64:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'o') goto yy148;
        goto yy54;
    yy65:
        rbs_skip(lexer);
#line 40 "src/lexer.re"
        {
            return rbs_next_token(lexer, pLBRACE);
        }
#line 672 "src/lexer.c"
    yy66:
        rbs_skip(lexer);
#line 43 "src/lexer.re"
        {
            return rbs_next_token(lexer, pBAR);
        }
#line 677 "src/lexer.c"
    yy67:
        rbs_skip(lexer);
#line 41 "src/lexer.re"
        {
            return rbs_next_token(lexer, pRBRACE);
        }
#line 682 "src/lexer.c"
    yy68:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'Z') {
            if (yych <= '9') {
                if (yych == '!') goto yy112;
                if (yych >= '0') goto yy68;
            } else {
                if (yych == '=') goto yy113;
                if (yych >= 'A') goto yy68;
            }
        } else {
            if (yych <= 'z') {
                if (yych == '_') goto yy68;
                if (yych >= 'a') goto yy68;
            } else {
                if (yych <= 0x0000007F) goto yy69;
                if (yych != 0x0000FFFD) goto yy68;
            }
        }
    yy69:
#line 160 "src/lexer.re"
    {
        return rbs_next_token(lexer, tNONASCIIIDENT);
    }
#line 706 "src/lexer.c"
    yy70:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
    yy71:
        if (yych <= '"') {
            if (yych <= 0x00000000) goto yy72;
            if (yych <= '!') goto yy70;
            goto yy73;
        } else {
            if (yych == '\\') goto yy74;
            goto yy70;
        }
    yy72:
        *lexer = backup;
        if (yyaccept <= 4) {
            if (yyaccept <= 2) {
                if (yyaccept <= 1) {
                    if (yyaccept == 0) goto yy3;
                    else
                        goto yy8;
                } else {
                    goto yy23;
                }
            } else {
                if (yyaccept == 3) goto yy28;
                else
                    goto yy45;
            }
        } else {
            if (yyaccept <= 6) {
                if (yyaccept == 5) goto yy82;
                else
                    goto yy164;
            } else {
                if (yyaccept == 7) goto yy258;
                else
                    goto yy286;
            }
        }
    yy73:
        rbs_skip(lexer);
#line 126 "src/lexer.re"
        {
            return rbs_next_token(lexer, tDQSTRING);
        }
#line 746 "src/lexer.c"
    yy74:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych == 'u') goto yy149;
        if (yych == 'x') goto yy150;
        goto yy70;
    yy75:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= ',') {
            if (yych <= '\f') {
                if (yych <= 0x00000000) goto yy76;
                if (yych <= 0x00000008) goto yy75;
                if (yych >= '\v') goto yy75;
            } else {
                if (yych <= 0x0000001F) {
                    if (yych >= 0x0000000E) goto yy75;
                } else {
                    if (yych == '#') goto yy75;
                }
            }
        } else {
            if (yych <= '>') {
                if (yych <= '-') goto yy75;
                if (yych <= '/') goto yy76;
                if (yych <= '9') goto yy75;
            } else {
                if (yych <= '^') {
                    if (yych <= 'Z') goto yy75;
                } else {
                    if (yych <= 'z') goto yy75;
                    if (yych >= 0x0000007F) goto yy75;
                }
            }
        }
    yy76:
#line 170 "src/lexer.re"
    {
        return rbs_next_token(lexer, tGIDENT);
    }
#line 785 "src/lexer.c"
    yy77:
        rbs_skip(lexer);
        goto yy76;
    yy78:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= 'Z') {
            if (yych <= '(') {
                if (yych <= '\'') goto yy72;
                goto yy151;
            } else {
                if (yych == '<') goto yy152;
                goto yy72;
            }
        } else {
            if (yych <= 'z') {
                if (yych <= '[') goto yy153;
                goto yy72;
            } else {
                if (yych <= '{') goto yy154;
                if (yych <= '|') goto yy155;
                goto yy72;
            }
        }
    yy79:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
    yy80:
        if (yych <= '\'') {
            if (yych <= 0x00000000) goto yy72;
            if (yych <= '&') goto yy79;
        } else {
            if (yych == '\\') goto yy83;
            goto yy79;
        }
    yy81:
        rbs_skip(lexer);
    yy82:
#line 127 "src/lexer.re"
    {
        return rbs_next_token(lexer, tSQSTRING);
    }
#line 826 "src/lexer.c"
    yy83:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych <= '\'') {
            if (yych <= 0x00000000) goto yy72;
            if (yych <= '&') goto yy79;
            goto yy156;
        } else {
            if (yych == '\\') goto yy83;
            goto yy79;
        }
    yy84:
        rbs_skip(lexer);
#line 48 "src/lexer.re"
        {
            return rbs_next_token(lexer, pSTAR2);
        }
#line 842 "src/lexer.c"
    yy85:
        rbs_skip(lexer);
        yych = rbs_peek(lexer);
        if (yych >= 0x00000001) goto yy85;
#line 62 "src/lexer.re"
        {
            return rbs_next_token(lexer, tINLINECOMMENT);
        }
#line 849 "src/lexer.c"
    yy86:
        rbs_skip(lexer);
#line 53 "src/lexer.re"
        {
